--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>App</title>
   </head>
   <body>
-    <noscript>test</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
